@@ -1300,6 +1300,7 @@ class CFileObject
 		const char			*Map();
 		char				*Load();
 		int					Load(CVar &target);
+		CString				MD5Sum();
 
 		// Virtuelle Funktionen
 		virtual int			Close ();
@@ -1399,24 +1400,24 @@ class CFile : public CFileObject
 
 
 		// Static Functions
-		static int Truncate(const char *filename, ppluint64 bytes);
+		static int Truncate(const CString &filename, ppluint64 bytes);
 		static int Exists(const CString &filename);
 		static int Existsf(const char *fmt, ...);
-		static int CopyFile(const char *oldfile, const char *newfile);
-		static int MoveFile(const char *oldfile, const char *newfile);
-		static int LoadFile(CVar &object, const char *filename);
-		static void *LoadFile(const char *filename, size_t *size=NULL);
+		static int CopyFile(const CString &oldfile, const CString &newfile, size_t buffersize=0);
+		static int MoveFile(const CString &oldfile, const CString &newfile);
+		static int LoadFile(CVar &object, const CString &filename);
+		static void *LoadFile(const CString &filename, size_t *size=NULL);
 		static int DeleteFile(const CString &filename);
 		static int DeleteFilef(const char *filename, ...);
 		static int TouchFile(const CString &filename);
 		static int TouchFilef(const char *filename, ...);
-		static int WriteFile(const void *content, size_t size, const char *filename, ...);
-		static int WriteFile(const CVar &object, const char *filename, ...);
-		static int RenameFile(const char *oldfile, const char *newfile);
+		static int WriteFilef(const void *content, size_t size, const char *filename, ...);
+		static int WriteFilef(const CVar &object, const char *filename, ...);
+		static int RenameFile(const CString &oldfile, const CString &newfile);
 		static int FileAttrf(int attr, const char *filename, ...);
 		static int FileAttr(int attr, const CString &filename);
-		static int Chmod(const char *filename, int attr);
-		static int Stat(const char *filename, CDirEntry &result);
+		static int Chmod(const CString &filename, int attr);
+		static int Stat(const CString &filename, CDirEntry &result);
 };
 
 
@@ -2301,7 +2302,6 @@ class CTree
 	int SavePFPHeader (CFileObject *ff, PFPSTRUCT *pfp);
 	int PresetPFPHeader (PFPSTRUCT *pfp);
 	char * resizebuffer(char *buffer, ppldd oldsize, ppldd newsize);
-	int Stat(const char *file, CDirEntry *data);
 	int IsDir(const char *path);
 	int IsFile(const char *file);
 	int IsTrue(const char *value);
